# framework.uifw.e17-extra-modules

./: .gitignore  AUTHORS  COPYING.Flora  NOTICE  e17-extra-modules.efl  e17-extra-modules.manifest  project.config
comp-slp/src/: Makefile.am  e_mod_comp.c  e_mod_comp.h  e_mod_comp_animation.c  e_mod_comp_animation.h  e_mod_comp_atoms.c  e_mod_comp_atoms.h  e_mod_comp_bg_win.c  e_mod_comp_canvas.c  e_mod_comp_canvas.h  e_mod_comp_cfdata.c  e_mod_comp_cfdata.h  e_mod_comp_data.h  e_mod_comp_debug.c  e_mod_comp_debug.h  e_mod_comp_effect.c  e_mod_comp_effect.h  e_mod_comp_effect_image_launch.c  e_mod_comp_effect_image_launch.h  e_mod_comp_effect_screen_capture.c  e_mod_comp_effect_screen_capture.h  e_mod_comp_effect_tm.c  e_mod_comp_effect_tm.h  e_mod_comp_effect_win_rotation.c  e_mod_comp_effect_win_rotation.h  e_mod_comp_hw_ov_win.c  e_mod_comp_hw_ov_win.h  e_mod_comp_object.c  e_mod_comp_object.h  e_mod_comp_pixmap_rotation.c  e_mod_comp_pixmap_rotation.h  e_mod_comp_pixmap_rotation_handler.c  e_mod_comp_pixmap_rotation_handler.h  e_mod_comp_policy.c  e_mod_comp_rotation.c  e_mod_comp_rotation.h  e_mod_comp_screen.c  e_mod_comp_shared_types.h  e_mod_comp_update.c  e_mod_comp_util.c  (+9 more)
comp-tizen-wearable/data/: Makefile.am  shadow.edc
comp-tizen-wearable/data/common/: comp-part-clipper.edc  comp-part-logger.edc  comp-part-shower.edc  comp-part-swallow.edc  comp-prog-rotation-on-no-effect.edc  comp-prog-show-rotation-no-effect.edc  comp-prog-signal-emit.edc
comp-tizen-wearable/data/group/: dialog.edc  fake_effect_default.edc  fake_effect_slide.edc  keyboard.edc  lock_screen.edc  no_effect.edc  quickpanel.edc  shadow_default.edc  shadow_fade.edc  shadow_twist.edc  slide.edc  task_switcher.edc
comp-tizen-wearable/src/: Makefile.am  e_mod_comp.c  e_mod_comp_atoms.c  e_mod_comp_atoms.h  e_mod_comp_aux_hint.c  e_mod_comp_aux_hint.h  e_mod_comp_bg_win.c  e_mod_comp_bg_win.h  e_mod_comp_canvas.c  e_mod_comp_cfdata.c  e_mod_comp_cfdata.h  e_mod_comp_debug.h  e_mod_comp_effect.h  e_mod_comp_hw_ov_win.h  e_mod_comp_hwcomp.c  e_mod_comp_hwcomp.h  e_mod_comp_object.h  e_mod_comp_policy.c  e_mod_comp_screen.h  e_mod_comp_shared_types.h  e_mod_comp_update.c  e_mod_comp_util.c  e_mod_comp_util.h  e_mod_comp_win_shape_input.c  e_mod_comp_win_type.c  e_mod_comp_win_type.h  e_mod_config.c  module.desktop.in
comp-tizen-wearable/src/effect/: Makefile.am  effect.c  effect.h  effect_image_launch.c  effect_pos_animation.c  effect_pos_animation.h  effect_win_rotation.h
devicemgr/: Makefile.am  configure.ac
devicemgr-wearable/src/: Makefile.am  e_mod_config.c  e_mod_main.c  e_mod_main.h  rotation_devicemgr.c  scrnconf_devicemgr.c  scrnconf_devicemgr.h  scrnmode_devicemgr.c
devicemgr/src/: Makefile.am  e_devicemgr_privates.h  e_mod_config.c  e_mod_config.h  e_mod_drv.c  e_mod_main.c  e_mod_main.h  e_mod_scrnconf.c  e_mod_scrnconf.h  hib_devicemgr.c  hib_devicemgr.h  rotation_devicemgr.c  rotation_devicemgr.h  scrnconf_devicemgr.c  scrnconf_devicemgr.h  sf_rotation_devicemgr.c  virt_monitor_devicemgr.c  virt_monitor_devicemgr.h
eom/src/: Makefile.am  e_mod_eom_clone.c  e_mod_eom_clone.h  e_mod_eom_config.c  e_mod_eom_config.h  e_mod_eom_dbus.c  e_mod_eom_dbus.h  e_mod_eom_ownership.c  e_mod_eom_ownership.h  e_mod_eom_privates.h  e_mod_eom_scrnconf.c  e_mod_eom_scrnconf.h  e_mod_eom_server.c  e_mod_eom_server.h  e_mod_main.c  e_mod_main.h
extndialog/: Makefile.am  autogen.sh  configure.ac
extndialog/src/: Makefile.am  extndialog-default.c  extndialog-hdmi.c  extndialog.c  extndialog.h
illume2-slp/src/: Makefile.am  e_illume.c  e_illume.h  e_illume_log.h  e_illume_private.h  e_mod_config.c  e_mod_log.c  e_mod_main.c  e_mod_policy.c  e_mod_quickpanel.c  e_mod_quickpanel.h  quickpanel.edc
illume2-slp/src/policies/illume/: Makefile.am  illume.c  policy.c  policy.h  policy_util.c  policy_util.h
illume2-tizen/src/policies/illume/: Makefile.am  (+10 more)
keyrouter/src/: Makefile  Makefile.am  e_mod_main.c  e_mod_main.h
keyrouter/src/.deps/: module_la-e_mod_main.Plo
mobile/devmode-tizen/: Makefile.am
mobile/devmode-tizen/include/: e_mod_devmode.h
mobile/devmode-tizen/src/: e_mod_devmode_color.c  e_mod_devmode_cross_widget.h  e_mod_devmode_trace_widget.c
move-tizen/data/: Makefile.am  effect.edc
move-tizen/data/group/: indicator.edc
move-tizen/src/: Makefile.am  e_mod_main.c  e_mod_main.h  e_mod_move.c  e_mod_move_apptray.c  e_mod_move_apptray.h  e_mod_move_atoms.c  e_mod_move_atoms.h  e_mod_move_border_contents.h  e_mod_move_border_shape_input.h  e_mod_move_border_type.c  e_mod_move_border_type.h  e_mod_move_canvas.c  e_mod_move_cfdata.c  e_mod_move_cfdata.h  e_mod_move_control_object.c  e_mod_move_debug.c  e_mod_move_debug.h  e_mod_move_dim_object.c  e_mod_move_evas_object.c  e_mod_move_evas_object.h  e_mod_move_event.c  e_mod_move_event.h  e_mod_move_flick.c  e_mod_move_flick.h  e_mod_move_indicator.c  e_mod_move_indicator_controller.h  e_mod_move_indicator_widget.c  e_mod_move_indicator_widget.h  e_mod_move_lockscreen.h  e_mod_move_mini_apptray.c  e_mod_move_mini_apptray.h  e_mod_move_mini_apptray_widget.c  e_mod_move_mini_apptray_widget.h  e_mod_move_object.c  e_mod_move_pwlock.c  e_mod_move_pwlock.h  e_mod_move_quickpanel.c  e_mod_move_quickpanel.h  e_mod_move_setup_wizard.c  (+11 more)
processmgr/src/: Makefile.am  e_mod_main.c  e_mod_main.h  e_mod_processmgr.c  e_mod_processmgr_cfdata.c  e_mod_processmgr_cfdata.h  e_mod_processmgr_debug.c  e_mod_processmgr_debug.h  e_mod_processmgr_dfps.c  e_mod_processmgr_shared_types.h  e_mod_processmgr_util.c
screen-reader/src/: Makefile.am  e_mod_config.c  e_mod_config.h  e_mod_main.c  e_mod_main.h
wearable/devmode-tizen/data/: Makefile  Makefile.am  e_mod_devmode.edc  e_mod_devmode.edj
wearable/devmode-tizen/src/: Makefile  Makefile.am  e_mod_config.h  e_mod_devmode_cross_widget.c  e_mod_devmode_event.c  e_mod_devmode_main.c  e_mod_devmode_trace_widget.c  e_mod_devmode_trace_widget.h  module.la
wearable/extndialog/: Makefile  config.h  config.status  configure.ac
wearable/extndialog/src/: Makefile  extndialog  extndialog.c  extndialog.h
(+591 files in other folders)
